[package]
name = "erdy"
rust-version = "1.74"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lnicola/erdy"
authors = ["TBD"]
description = "TBD"

[dependencies]
anyhow = "1.0"
ball-tree = "0.5"
clap = { version = "4.5", features = ["derive"] }
gdal = { version = "0.17" }
gdal-sys = "0.10"
# gdal = { version = "0.17", git = "https://github.com/georust/gdal" }
# gdal-sys = { version = "0.10", git = "https://github.com/georust/gdal" }
indicatif = "0.17"
num-traits = "0.2"
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "std", "std_rng"] }
tempfile = "3.12"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "smallvec"] }
walkdir = "2.5"

[package.metadata.generate-rpm]
assets = [{ source = "target/release/erdy", dest = "/usr/bin/erdy", mode = "755" }]
