[package]
name = "erdy"
rust-version = "1.77"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lnicola/erdy"
authors = ["TBD"]
description = "TBD"

[dependencies]
anyhow = "1.0"
ball-tree = "0.5"
clap = { version = "4.5", features = ["derive"] }
faster-hex = "0.10"
gdal = "0.17"
gdal-sys = "0.10"
indicatif = "0.17"
num-traits = "0.2"
quick-xml = "0.36"
rand = { version = "0.8", default-features = false, features = [
    "small_rng",
    "std",
    "std_rng",
] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "smallvec",
] }
walkdir = "2.5"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/erdy", dest = "/usr/bin/erdy", mode = "755" },
]
