[package]
name = "erdy"
rust-version = "1.77"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lnicola/erdy"
authors = ["TBD"]
description = "TBD"

[dependencies]
anyhow = "1.0"
ball-tree = "0.5"
clap = { version = "4.5", features = ["derive"] }
faster-hex = "0.10"
flume = "0.11.0"
gdal = "0.18"
gdal-sys = "0.11"
indicatif = "0.17"
num-traits = "0.2"
parking_lot = "0.12.3"
quick-xml = "0.37"
rand = { version = "0.9", default-features = false, features = [
    "os_rng",
    "small_rng",
    "std",
    "std_rng",
] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.19"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "smallvec",
] }
walkdir = "2.5"

[dev-dependencies]
approx_eq = "0.1.8"

[features]
bindgen = ["gdal/bindgen"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/erdy", dest = "/usr/bin/erdy", mode = "755" },
]
